[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/smoke2.png" type="Texture" id=1]
[ext_resource path="res://Assets/smoke1.png" type="Texture" id=2]
[ext_resource path="res://Smoke.gd" type="Script" id=3]
[ext_resource path="res://Assets/smoke3.png" type="Texture" id=4]
[ext_resource path="res://Assets/smoke4.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 53.0581 )

[node name="Smoke" type="Area2D"]
collision_mask = 4
script = ExtResource( 3 )

[node name="Animation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="StatusTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Smoke_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Smoke_body_exited"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="StatusTimer" to="." method="_on_StatusTimer_timeout"]
